--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,20 +22,16 @@
     "Javascript"
   ],
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "contributors": [
-    {
-      "name": "Martin Urban",
-      "email": "martin.urban@firma.seznam.cz"
-    },
-    {
-      "name": "Martin Jurča",
-      "email": "martin.jurca@firma.seznam.cz"
-    },
-    {
-      "name": "Ondřej Baše",
-      "email": "ondrej.base@firma.seznam.cz"
-    }
-  ],
+  "contributors": [{
+    "name": "Martin Urban",
+    "email": "martin.urban@firma.seznam.cz"
+  }, {
+    "name": "Martin Jurča",
+    "email": "martin.jurca@firma.seznam.cz"
+  }, {
+    "name": "Ondřej Baše",
+    "email": "ondrej.base@firma.seznam.cz"
+  }],
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/ima.git"
@@ -79,14 +75,13 @@
       "babelify"
     ]
   },
-  "size-limit": [
-    {
-      "limit": "1500 ms",
-      "path": "dist/ima.client.cjs.js"
-    },
-    {
-      "limit": "1500 ms",
-      "path": "dist/ima.client.esm.js"
-    }
-  ]
+  "size-limit": [{
+    "limit": "30 KB",
+    "path": "dist/ima.client.cjs.js",
+    "running": false
+  }, {
+    "limit": "30 KB",
+    "path": "dist/ima.client.esm.js",
+    "running": false
+  }]
 }
