--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "bulma": "0.8.0",
     "commitizen": "4.0.3",
     "del": "5.1.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
     "eslint": "6.7.2",
     "eslint-config-last": "0.0.5",
     "eslint-config-prettier": "6.7.0",
@@ -43,6 +40,7 @@
     "verdaccio": "4.3.5"
   },
   "scripts": {
+    "postinstall": "npm install --prefix ./packages/devtools",
     "benchmark": "utils/benchmark/benchmark.sh",
     "doc": "gulp doc",
     "test": "lerna run test && npm run --prefix ./packages/devtools test",
