--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -51,6 +51,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "custom-event-polyfill": "^1.0.7",
+    "cssnano": "^4.1.10",
     "del": "^5.1.0",
     "fancy-log": "^1.3.3",
     "fb-flo": "^0.5.0",
@@ -58,7 +59,6 @@
     "gulp-babel": "^8.0.0",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.3",
     "gulp-eslint": "^6.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-jsdoc3": "^2.0.0",
