--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@ima/devtools",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "IMA.js debugging panel in the Chrome Developer Tools window.",
   "main": "dist/main.js",
   "scripts": {
     "preversion": "npm test",
-    "npm version:patch": "npm --no-git-tag-version version patch -m 'chore(release-devtools): publish'",
-    "npm version:minor": "npm --no-git-tag-version version minor -m 'chore(release-devtools): publish'",
-    "npm version:major": "npm --no-git-tag-version version major -m 'chore(release-devtools): publish'",
-    "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git tag devtools-v$VERSION && git push --follow-tags",
+    "version:patch": "npm --no-git-tag-version version patch",
+    "version:minor": "npm --no-git-tag-version version minor",
+    "version:major": "npm --no-git-tag-version version major",
+    "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag devtools-v$VERSION && git push --follow-tags",
     "publish-webstore": "npm install && npm run build && npm test && npm run upload",
     "upload": "webstore upload --source ./dist/ima.devtools.zip --auto-publish",
     "test": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
