--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bulma": "0.8.0",
     "commitizen": "4.0.3",
     "del": "5.1.0",
-    "eslint": "6.8.0",
+    "eslint": "^7.2.0",
     "eslint-config-last": "0.0.5",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-jasmine": "4.1.0",
