--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -10,9 +10,10 @@
     "version:major": "npm --no-git-tag-version version major",
     "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m 'devtools-v$VERSION' devtools-v$VERSION && git push --follow-tags",
     "publish-webstore": "npm run build && npm run upload",
-    "upload": "webstore upload --source ./dist/ima.devtools.zip --auto-publish",
+    "upload": "webstore upload --source ./out/ima.devtools.zip --auto-publish",
     "test": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
-    "build": "webpack --config webpack.prod.js",
+    "build": "NODE_ENV=production webpack --config webpack.prod.js",
+    "postbuild": "node zipBundle.js",
     "dev": "webpack --watch --progress --config webpack.dev.js"
   },
   "keywords": [
@@ -42,50 +43,52 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-external-helpers": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
-    "chrome-webstore-upload-cli": "^1.2.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.1",
-    "cssnano": "^4.1.10",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "file-loader": "^5.0.2",
-    "generate-asset-webpack-plugin": "^0.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "postcss-loader": "^3.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "zip-webpack-plugin": "^3.0.0"
+    "@babel/core": "7.12.9",
+    "@babel/plugin-external-helpers": "7.12.1",
+    "@babel/preset-env": "7.12.7",
+    "@babel/preset-react": "7.12.7",
+    "archiver": "^5.1.0",
+    "autoprefixer": "10.0.4",
+    "babel-loader": "8.2.2",
+    "chrome-webstore-upload-cli": "1.2.0",
+    "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "6.3.2",
+    "css-loader": "5.0.1",
+    "cssnano": "4.1.10",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.5",
+    "enzyme-to-json": "3.6.1",
+    "file-loader": "6.2.0",
+    "generate-file-webpack-plugin": "^1.0.1",
+    "identity-obj-proxy": "3.0.0",
+    "less": "3.12.2",
+    "less-loader": "7.1.0",
+    "mini-css-extract-plugin": "1.3.1",
+    "postcss": "^8.1.10",
+    "postcss-loader": "4.1.0",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "5.0.3",
+    "webpack": "5.9.0",
+    "webpack-cli": "4.2.0",
+    "webpack-merge": "5.4.0"
   },
   "dependencies": {
-    "@ima/devtools-scripts": "17.5.0",
-    "@reach/menu-button": "^0.6.2",
-    "@reach/tooltip": "^0.6.2",
-    "@reduxjs/toolkit": "^1.1.0",
-    "classnames": "^2.2.6",
-    "easy-uid": "^1.0.1",
-    "lodash.debounce": "^4.0.8",
-    "nanoreset": "^4.0.0",
-    "prismjs": "^1.17.1",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-json-view": "^1.19.1",
-    "react-redux": "^7.1.3",
-    "react-simple-code-editor": "^0.10.0",
-    "react-tabs": "^3.0.0",
-    "redux": "^4.0.4"
+    "@ima/devtools-scripts": "17.7.3",
+    "@reach/menu-button": "0.12.1",
+    "@reach/tooltip": "0.12.1",
+    "@reduxjs/toolkit": "1.5.0",
+    "clsx": "^1.1.1",
+    "easy-uid": "1.0.2",
+    "lodash.debounce": "4.0.8",
+    "nanoreset": "5.0.0",
+    "prismjs": "1.22.0",
+    "prop-types": "15.7.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-json-view": "1.19.1",
+    "react-redux": "7.2.2",
+    "react-simple-code-editor": "0.11.0",
+    "react-tabs": "3.1.1",
+    "redux": "4.0.5"
   }
 }
