--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -73,7 +73,7 @@
     "webpack-merge": "5.4.0"
   },
   "dependencies": {
-    "@ima/devtools-scripts": "17.7.3",
+    "@ima/devtools-scripts": "^17.0.0",
     "@reach/menu-button": "0.12.1",
     "@reach/tooltip": "0.12.1",
     "@reduxjs/toolkit": "1.5.0",
