--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -10,10 +10,9 @@
     "version:major": "npm --no-git-tag-version version major",
     "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m 'devtools-v$VERSION' devtools-v$VERSION && git push --follow-tags",
     "publish-webstore": "npm run build && npm run upload",
-    "upload": "webstore upload --source ./out/ima.devtools.zip --auto-publish",
+    "upload": "webstore upload --source ./dist --auto-publish",
     "test": "../../node_modules/.bin/jest --no-watchman -c jest.conf.js",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "postbuild": "node zipBundle.js",
     "dev": "webpack --watch --progress --config webpack.dev.js"
   },
   "keywords": [
@@ -47,7 +46,6 @@
     "@babel/plugin-external-helpers": "7.12.1",
     "@babel/preset-env": "7.12.7",
     "@babel/preset-react": "7.12.7",
-    "archiver": "^5.1.0",
     "autoprefixer": "10.0.4",
     "babel-loader": "8.2.2",
     "chrome-webstore-upload-cli": "1.2.0",
