chore: run commit lint for all branches

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "bash -c \"if [[ `git rev-parse --abbrev-ref HEAD` =~ ^(master|next)$ ]] ; then commitlint -E HUSKY_GIT_PARAMS ; fi\""
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "dependencies": {}
