refactor: 💡 Turned off hot reload for the moment

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,7 +11,7 @@
   "bin": {
     "ima": "./bin/ima.js"
   },
-  "main": "./index.js",
+  "main": "./main.js",
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "contributors": [],
   "repository": {
