--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,14 +29,18 @@
   "dependencies": {
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.0",
     "chalk": "^4.1.1",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
     "mini-css-extract-plugin": "^1.6.0",
     "null-loader": "^4.0.1",
+    "postcss": "^8.3.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.1.0",
+    "postcss-preset-env": "^6.7.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
