--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,6 +44,7 @@
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
+    "extract-loader": "^5.1.0",
     "yargs": "^17.0.1"
   },
   "devDependencies": {
