--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,6 +32,8 @@
     "chalk": "^4.1.1",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
+    "fast-glob": "^3.2.5",
+    "glob-import-loader": "^1.1.4",
     "html-webpack-plugin": "^5.3.1",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
@@ -44,10 +46,7 @@
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
-    "extract-loader": "^5.1.0",
+    "webpack-remove-empty-scripts": "^0.7.1",
     "yargs": "^17.0.1"
-  },
-  "devDependencies": {
-    "glob-import-loader": "^1.1.4"
   }
 }
