--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -42,6 +42,7 @@
     "postcss": "^8.3.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.0",
+    "postcss-pipeline-webpack-plugin": "^6.0.0",
     "postcss-preset-env": "^6.7.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
