--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,8 +30,10 @@
     "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.1",
+    "compression-webpack-plugin": "^8.0.0",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.1",
     "fast-glob": "^3.2.5",
     "glob-import-loader": "^1.1.4",
     "html-webpack-plugin": "^5.3.1",
