refactor: 💡 CR Fixes

--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "engines": {
+    "node": ">=14"
+  },
   "dependencies": {}
 }
