feat(node): added support for npm7, node16

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,8 @@
   },
   "packages": [
     "packages/!(devtools)",
-    "packages/devtools-scripts"
+    "packages/devtools-scripts",
+    "packages/cli"
   ],
   "ignoreChanges": [
     "**/__tests__/**",
