--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -69,8 +69,8 @@
     "node-fetch": "^2.6.0"
   },
   "peerDependencies": {
-    "react": "16.x",
-    "react-dom": "16.x"
+    "react": ">= 16.9.0",
+    "react-dom": ">= 16.9.0"
   },
   "browserify": {
     "transform": [
