--- a/packages/gulp-tasks/package.json
+++ b/packages/gulp-tasks/package.json
@@ -27,12 +27,12 @@
   },
   "homepage": "https://github.com/seznam/ima",
   "peerDependencies": {
-    "@ima/helpers": "^17.x",
-    "@ima/plugin-websocket": "^0.x"
+    "@ima/helpers": ">= 17.9.0",
+    "@ima/plugin-websocket": ">= 1.1.0"
   },
   "devDependencies": {
     "@ima/helpers": "^17.9.0",
-    "@ima/plugin-websocket": "^0.1.0"
+    "@ima/plugin-websocket": "^1.1.0"
   },
   "dependencies": {
     "@babel/core": "^7.8.7",
