--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,7 +31,7 @@
     "express": "^4.17.1"
   },
   "dependencies": {
-    "async-each": "1.0.3",
+    "ejs": "^3.1.6",
     "error-to-json": "1.1.0",
     "highlight.js": "9.16.2",
     "stack-trace": "0.0.10",
