--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-react": "^7.13.13",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "babel-loader": "^8.2.2",
+    "better-opn": "^3.0.0",
     "chalk": "^4.1.1",
     "compression-webpack-plugin": "^8.0.0",
     "copy-webpack-plugin": "^9.0.0",
@@ -40,9 +41,11 @@
     "fast-glob": "^3.2.5",
     "glob-import-loader": "^1.1.4",
     "html-webpack-plugin": "^5.3.1",
+    "install": "^0.13.0",
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "npm": "^7.21.1",
     "null-loader": "^4.0.1",
     "postcss": "^8.3.4",
     "postcss-flexbugs-fixes": "^5.0.2",
