--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,7 @@
     "postcss-pipeline-webpack-plugin": "^6.0.0",
     "postcss-preset-env": "^6.7.0",
     "react-refresh": "^0.10.0",
+    "source-map-loader": "^3.0.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
