--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,6 +45,7 @@
     "less": "^4.1.1",
     "less-loader": "^9.0.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "mini-svg-data-uri": "^1.3.3",
     "npm": "^7.21.1",
     "null-loader": "^4.0.1",
     "postcss": "^8.3.4",
@@ -54,6 +55,7 @@
     "postcss-preset-env": "^6.7.0",
     "react-refresh": "^0.10.0",
     "source-map-loader": "^3.0.0",
+    "svgo-loader": "^3.0.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
