--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -61,5 +61,10 @@
     "webpack-hot-middleware": "^2.25.0",
     "webpack-remove-empty-scripts": "^0.7.1",
     "yargs": "^17.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.7.10",
+    "@types/yargs": "^17.0.2",
+    "typescript": "^4.4.2"
   }
 }
