--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,6 +65,8 @@
   "devDependencies": {
     "@types/node": "^16.7.10",
     "@types/yargs": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "typescript": "^4.4.2"
   }
 }
