--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,6 +18,7 @@
     "type": "git",
     "url": "https://github.com/seznam/ima.git"
   },
+  "types": "./types.d.ts",
   "bugs": {
     "url": "https://github.com/seznam/ima/issues"
   },
@@ -63,7 +64,12 @@
     "yargs": "^17.1.1"
   },
   "devDependencies": {
+    "@types.d.tsmpression-webpack-plugin": "^6.0.6",
+    "@types/copy-webpack-plugin": "^8.0.1",
+    "@types/css-minimizer-webpack-plugin": "^3.0.2",
+    "@types/mini-css-extract-plugin": "^2.2.0",
     "@types/node": "^16.7.10",
+    "@types/terser-webpack-plugin": "^5.2.0",
     "@types/yargs": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
