--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,9 +9,12 @@
     "Javascript"
   ],
   "bin": {
-    "ima": "./bin/ima.js"
+    "ima": "./dist/bin/ima.js"
   },
   "main": "./main.js",
+  "scripts": {
+    "build": "tsc"
+  },
   "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
   "contributors": [],
   "repository": {
