--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -31,8 +31,8 @@
     "prettier": "2.2.1"
   },
   "dependencies": {
-    "@ima/core": "17.10.0",
-    "@ima/server": "17.9.0",
+    "@ima/core": "17.11.2",
+    "@ima/server": "17.11.2",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
@@ -43,8 +43,8 @@
     "method-override": "3.0.0",
     "multer": "1.4.2",
     "prop-types": "15.7.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "serve-favicon": "2.5.0"
   }
 }
