--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -63,6 +63,7 @@
     "webpack": "^5.52.0",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^4.0.2",
     "webpack-remove-empty-scripts": "^0.7.1",
     "yargs": "^17.1.1"
   },
