--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -77,6 +77,7 @@
     "@types/yargs": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
+    "esbuild": "^0.13.13",
     "typescript": "^4.4.4"
   }
 }
