--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -43,6 +43,7 @@
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.2",
+    "esbuild": "^0.13.13",
     "fast-glob": "^3.2.7",
     "glob-import-loader": "^1.1.4",
     "html-webpack-plugin": "^5.5.0",
@@ -51,6 +52,7 @@
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.4",
     "mini-svg-data-uri": "^1.4.3",
+    "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
     "postcss": "^8.3.11",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -73,11 +75,11 @@
     "@types/css-minimizer-webpack-plugin": "^3.0.2",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^16.11.7",
+    "@types/nodemon": "^1.19.1",
     "@types/terser-webpack-plugin": "^5.2.0",
     "@types/yargs": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "esbuild": "^0.13.13",
     "typescript": "^4.4.4"
   }
 }
