fix: 🐛 Fixed IMA.js SPA mode

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "async-each": "1.0.3",
+    "ejs": "^3.1.6",
     "error-to-json": "1.1.0",
     "highlight.js": "9.16.2",
     "stack-trace": "0.0.10",
