--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -40,7 +40,6 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.1",
-    "chalk": "^4.1.2",
     "compression-webpack-plugin": "^9.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.5.1",
@@ -56,6 +55,7 @@
     "mini-svg-data-uri": "^1.4.3",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
+    "picocolors": "^1.0.0",
     "postcss": "^8.3.11",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.0",
