--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "lib": ["ES2020"],
+    "target": "ESNext",
+    "lib": ["ESNext"],
     "module": "CommonJS",
     "rootDir": "./",
     "declaration": true,
