refactor: 💡 Extracted css scrambling and amp to cli plugins

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -32,6 +32,6 @@
     "types",
     "webpack",
     "./main.ts",
-    "./types.ts",
+    "./types.ts", "plugins/scramble-css/postCssScrambler",
   ]
 }
