--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -51,6 +51,7 @@
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.4",
     "mini-svg-data-uri": "^1.4.3",
+    "node-fetch": "^3.1.0",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
     "picocolors": "^1.0.0",
@@ -62,6 +63,7 @@
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
     "react-refresh": "^0.11.0",
+    "source-map": "^0.7.3",
     "source-map-loader": "^3.0.0",
     "svgo-loader": "^3.0.0",
     "webpack": "^5.63.0",
@@ -75,10 +77,13 @@
     "@types/compression-webpack-plugin": "^9.0.0",
     "@types/copy-webpack-plugin": "^8.0.1",
     "@types/css-minimizer-webpack-plugin": "^3.0.2",
+    "@types/express": "^4.17.13",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/node": "^16.11.7",
     "@types/nodemon": "^1.19.1",
     "@types/terser-webpack-plugin": "^5.2.0",
+    "@types/webpack-dev-middleware": "^5.0.2",
+    "@types/webpack-hot-middleware": "^2.25.5",
     "@types/yargs": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
