--- a/packages/cli/error-overlay/package.json
+++ b/packages/cli/error-overlay/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "source-map": "^0.7.3"
+    "source-map": "^0.7.3",
+    "stack-trace": "^1.0.0-pre1"
   },
   "devDependencies": {
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/stack-trace": "0.0.29",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.4",
