--- a/packages/cli/error-overlay/tsconfig.json
+++ b/packages/cli/error-overlay/tsconfig.json
@@ -9,6 +9,10 @@
     "allowJs": true,
     "esModuleInterop": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "#/*": ["src/*"]
+    }
   }
 }
