--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-tailwindcss": "^1.17.2",
     "fs-extra": "8.1.0",
     "git-cz": "4.3.1",
     "gulp": "4.0.2",
