--- a/packages/cli/error-overlay/package.json
+++ b/packages/cli/error-overlay/package.json
@@ -2,16 +2,17 @@
   "name": "error-overlay",
   "version": "1.0.0",
   "description": "",
-  "main": "./index.js",
+  "main": "./",
   "scripts": {
-    "dev": "webpack-dev-server --mode=development --config webpack.config.js",
-    "watch": "webpack --mode=development --config webpack.config.js --watch",
+    "dev": "webpack --mode=development --config webpack.config.js --watch",
     "build": "webpack --mode=production --config webpack.config.js"
   },
   "keywords": [],
   "author": "Jan Šimeček",
   "license": "MIT",
   "dependencies": {
+    "error-stack": "^1.0.3",
+    "error-stack2": "^1.0.17",
     "hljs": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,12 +29,13 @@
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
+    "raw-loader": "^4.0.2",
     "style-loader": "^3.3.1",
     "tailwindcss": "^2.2.19",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack-merge": "^5.8.0"
   }
 }
