--- a/packages/cli/error-overlay/package.json
+++ b/packages/cli/error-overlay/package.json
@@ -11,19 +11,16 @@
   "author": "Jan Šimeček",
   "license": "MIT",
   "dependencies": {
-    "error-stack": "^1.0.3",
-    "error-stack2": "^1.0.17",
+    "easy-uid": "^1.0.2",
     "hljs": "^6.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "source-map": "^0.7.3",
-    "stack-trace": "^1.0.0-pre1"
+    "source-map": "^0.7.3"
   },
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "@types/stack-trace": "0.0.29",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.4",
