--- a/packages/cli/error-overlay/package.json
+++ b/packages/cli/error-overlay/package.json
@@ -21,6 +21,7 @@
     "@types/highlight.js": "^10.1.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/webpack-env": "^1.16.3",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.4",
