--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -38,10 +38,12 @@
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
     "tailwindcss": "^2.2.19",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
+    "use-context-selector": "^1.3.9",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0"
