--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -23,8 +23,9 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "clsx": "^1.1.1",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
@@ -32,17 +33,18 @@
     "eslint-plugin-import": "^2.25.3",
     "hljs": "^6.2.3",
     "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
+    "prismjs": "^1.25.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.2",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2",
+    "typescript": "^4.5.4",
     "use-context-selector": "^1.3.9",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
