--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
+    "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.1",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.1",
@@ -65,7 +66,6 @@
     "svgo-loader": "^3.0.0",
     "webpack": "^5.63.0",
     "webpack-dev-middleware": "^5.2.1",
-    "webpack-hot-middleware": "^2.25.1",
     "webpack-remove-empty-scripts": "^0.7.1",
     "yargs": "^17.2.1"
   },
