--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -22,9 +22,11 @@
     "@types/highlight.js": "^10.1.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "anser": "^2.1.0",
     "clsx": "^1.1.1",
     "copy-webpack-plugin": "^10.1.0",
     "css-loader": "^6.5.1",
