--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/highlight.js": "^10.1.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
@@ -28,23 +29,24 @@
     "@typescript-eslint/parser": "^5.7.0",
     "anser": "^2.1.0",
     "clsx": "^1.1.1",
-    "copy-webpack-plugin": "^10.1.0",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
+    "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^1.0.2",
     "eslint-plugin-import": "^2.25.3",
     "hljs": "^6.2.3",
+    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.0.1",
+    "postcss-preset-env": "^7.0.2",
     "prismjs": "^1.25.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
-    "tailwindcss": "^3.0.2",
+    "tailwindcss": "^3.0.7",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
     "use-context-selector": "^1.3.9",
