feat: 🎸 Server-side console compile error reporting

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,8 +38,10 @@
     "@babel/preset-react": "^7.16.5",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "anser": "^2.1.0",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.1",
+    "cli-highlight": "^2.1.11",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
