--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -19,8 +19,9 @@
   "author": "Jan Šimeček",
   "license": "MIT",
   "devDependencies": {
-    "@types/highlight.js": "^10.1.0",
+    "@ima/cli": "*",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
@@ -34,7 +35,6 @@
     "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^1.0.2",
     "eslint-plugin-import": "^2.25.3",
-    "hljs": "^6.2.3",
     "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
