--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -12,7 +12,7 @@
     "ima": "./dist/bin/ima.js"
   },
   "main": "./dist/main.js",
-  "types": "./dist/main/main.d.ts",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
