--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,11 +5,12 @@
     "module": "CommonJS",
     "rootDir": "./",
     "declaration": true,
+    "declarationDir": "./dist",
     "moduleResolution": "node",
     "typeRoots": ["./types", "./node_modules/@types"],
     "resolveJsonModule": true,
     "allowJs": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "importHelpers": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
