--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,29 +1,8 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es2016",
-    "lib": [],
-    "module": "commonjs",
-    "typeRoots": [
-      "./typings",
-      "./node_modules/@types"
-    ],
-    // "baseUrl": "./",
-    // "paths": {},
-    "outDir": "./dist",
-    "declaration": true,
-    "noEmitOnError": true,
-    "allowJs": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noUnusedLocals": false,
-    "skipLibCheck": true,
-    "jsx": "react",
+    "outDir": "./dist"
   },
-  "exclude": [
-    "./node_modules",
-    "./dist"
-  ],
   "include": [
     "./typings/**/*",
     "./src/**/*"
