--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -10,22 +10,21 @@
     "stack-trace"
   ],
   "version": "17.10.0",
-  "main": "./dist/client.js",
+  "main": "./dist/",
   "scripts": {
-    "dev": "NODE_ENV=development webpack --config webpack.config.js --watch",
-    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "NODE_ENV=development webpack --config webpack.config.ts --watch",
+    "build": "NODE_ENV=production webpack --config webpack.config.ts",
     "lint": "../../node_modules/.bin/eslint './**/*.{js,ts,tsx,jsx}'"
   },
   "author": "Jan Šimeček",
   "license": "MIT",
   "devDependencies": {
     "@ima/cli": "*",
-    "@types/lodash.debounce": "^4.0.6",
+    "@types/node": "^17.0.4",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
-    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "anser": "^2.1.0",
@@ -35,23 +34,21 @@
     "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^1.0.2",
     "eslint-plugin-import": "^2.25.3",
-    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.2",
     "prismjs": "^1.25.0",
-    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
     "tailwindcss": "^3.0.7",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "use-context-selector": "^1.3.9",
     "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-cli": "^4.9.1"
   }
 }
