refactor: 💡 CLI output cleanup

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,8 +33,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@ima/error-overlay": "*",
-    "@ima/hmr-client": "*",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
@@ -43,6 +41,7 @@
     "anser": "^2.1.0",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.1",
+    "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
@@ -57,7 +56,6 @@
     "mini-svg-data-uri": "^1.4.3",
     "nodemon": "^2.0.15",
     "null-loader": "^4.0.1",
-    "picocolors": "^1.0.0",
     "postcss": "^8.4.5",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
