--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "5.1.0",
     "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "25.3.4",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
@@ -55,7 +56,7 @@
     "release:publish": "lerna publish from-git --yes",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.eslintignore",
-    "lint": "npm run lint:cmd -- './**/*.{js,jsx}'",
+    "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "npm run lint -- --fix",
     "stylelint": "stylelint './**/*.less'",
     "stylelint:fix": "npm run stylelint -- --fix",
