--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -13,8 +13,7 @@
   "main": "./dist/",
   "scripts": {
     "dev": "NODE_ENV=development webpack --config webpack.config.ts --watch",
-    "build": "NODE_ENV=production webpack --config webpack.config.ts",
-    "lint": "../../node_modules/.bin/eslint './**/*.{js,ts,tsx,jsx}'"
+    "build": "NODE_ENV=production webpack --config webpack.config.ts"
   },
   "author": "Jan Šimeček",
   "license": "MIT",
@@ -25,15 +24,13 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
     "anser": "^2.1.0",
     "clsx": "^1.1.1",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^1.0.2",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-tailwindcss": "^3.3.2",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
