--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,6 +65,7 @@
     "pretty-bytes": "^5.6.0",
     "pretty-ms": "^7.0.1",
     "react-refresh": "^0.11.0",
+    "schema-utils": "^4.0.0",
     "source-map-loader": "^3.0.1",
     "svgo-loader": "^3.0.0",
     "webpack": "^5.68.0",
