--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,6 +50,8 @@
     "core-js": "^3.21.1",
     "css-loader": "^6.6.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
+    "express": "^4.17.3",
+    "express-static-gzip": "^2.1.5",
     "globby": "^11.0.4",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
