--- a/packages/error-overlay/tsconfig.json
+++ b/packages/error-overlay/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["DOM"],
     "outDir": "./dist",
     "baseUrl": ".",
+    "declaration": false,
     "paths": {
       "#/*": ["./src/*"]
     }
