--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -2,10 +2,8 @@
   "name": "@ima/error-overlay",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
-    "IMA",
     "IMA.js",
-    "Isomorphic",
-    "Javascript",
+    "hot-module-replacement",
     "error-overlay",
     "stack-trace"
   ],
@@ -21,25 +19,21 @@
     "@ima/cli": "*",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "anser": "^2.1.0",
+    "@types/react-dom": "^17.0.12",
     "clsx": "^1.1.1",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
-    "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.3.0",
-    "easy-uid": "^1.0.2",
-    "eslint-plugin-tailwindcss": "^3.3.2",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
+    "easy-uid": "^2.0.2",
+    "eslint-plugin-tailwindcss": "^3.5.0",
+    "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.0.2",
-    "prismjs": "^1.25.0",
+    "prismjs": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.23",
     "use-context-selector": "^1.3.9"
   }
 }
