--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "lib": [],
+    "lib": ["ES2020"],
     "module": "commonjs",
     "typeRoots": [
       "typings",
